--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="The baldest and the most beautiful of all tokens the B&B. This is an tribute to Brian the bald head.">
+	<meta name="description" content="There is not much else to it, you are literally investing into a roll of toilet paper.">
 	<title>BASED TOILET PAPER</title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
